Add tests of processing multiple FFTs at a time